<package>
  <name>lsm_localization</name>
  <version>1.0.0</version>
  <description>
    <p>
      A full localization algorithm that can be used togeter with ROS
      Navigation package to localize the robot. It is based on
      incremental laser scan matcher, using Andrea Censi's Canonical
      Scan Matcher (CSM) implementation and it has been derived from
      the code available in ROS scan_tools package.
      See <a href="http://censi.mit.edu/software/csm/">CSM web site</a>,
      and also
      <a hred="https://github.com/CCNYRoboticsLab/scan_tools">scan tools code</a>
      for more info. CSM library is licensed under the GNU Lesser General
      Public License v3, whereas the rest of the code is released under the
      BSD license.
    </p>
  </description>
  <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>
  <author email="ilija.hadzic@nokia-bell-labs.com">Ilija Hadzic</author>
  <maintainer email="ilija.hadzic@nokia-bell-labs.com">Ilija Hadzic</maintainer>
  <license>BSD</license>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>csm</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>csm</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
</package>
