<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lsm_localization</name>
  <version>2.0.0</version>
  <description>
    A full localization algorithm that can be used together with the ROS Navigation package to localize the robot. It is based on incremental laser scan matcher, using Andrea Censi's Canonical Scan Matcher (CSM) implementation and derived from the code available in the ROS scan_tools package.
    See: http://censi.mit.edu/software/csm/
    and https://github.com/CCNYRoboticsLab/scan_tools
  </description>

  <maintainer email="ilija.hadzic@nokia-bell-labs.com">Ilija Hadzic</maintainer>
  <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>
  <author email="ilija.hadzic@nokia-bell-labs.com">Ilija Hadzic</author>

  <license>BSD</license>
  <license>LGPLv3</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>csm</depend>
  <depend>Eigen3</depend>

  <!-- Optional: If you use launch files -->
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
